<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Btm_Return"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <ImageView
        android:id="@+id/background_or"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_or" />

    <LinearLayout
        android:id="@+id/returnBack"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/Btmexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Exit"
            android:textColor="@color/white"
            android:textSize="21dp"
            app:rippleColor="#2196F3"
            tools:ignore="InvalidId" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Game1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="440dp"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/BtmGame"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/game1"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="21dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>


    </LinearLayout>

    <TextView
        android:id="@+id/choose_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/choose_game"
        android:textColor="#0F4357"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/Game2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="370dp"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/BtmGame1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/game2"
            android:textColor="@color/gray"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Game3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/BtmGame2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/game3"
            android:textColor="@color/gray"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</RelativeLayout>